--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RECAPTCHA_ENABLE=false
+RECAPTCHA_SITE_KEY=null
+RECAPTCHA_SECRET_KEY=null
