Implement "Log in with GitHub"

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 RECAPTCHA_ENABLE=false
 RECAPTCHA_SITE_KEY=null
 RECAPTCHA_SECRET_KEY=null
+
+GITHUB_CLIENT_ID=null
+GITHUB_CLIENT_SECRET=null
