Update homepage and dashboard

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "bulma-divider": "^0.2.0",
+        "bulma-quickview": "^2.0.0"
     }
 }
